Update doco and swagger
